src/objects/Job__c.object
<CustomObject>
    <fields>
        <fullName>Industry1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Industry1</label>
        <referenceTo>Industry__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Industry2</label>
        <referenceTo>Industry__c</referenceTo>
        <relationshipLabel>Jobs (Industry2)</relationshipLabel>
        <relationshipName>Jobs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry3__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Industry3</label>
        <referenceTo>Industry__c</referenceTo>
        <relationshipLabel>Jobs (Industry3)</relationshipLabel>
        <relationshipName>Jobs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>List_Order_By__c</fullName>
        <formula>IF(Survival_Job__c, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Order By</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Name External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survival_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survival Job</label>
        <type>Checkbox</type>
    </fields>
    <label>Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>